iRedMail-1.5.2:
    * Improvements:
        - Roundcube: Log client IPs by default.

    * Fixed issues:
        - Can not login to SOGo webmail due to small (Nginx) proxy buffer size.
          Thanks to Sysadminfromhell for the report in https://forum.iredmail.org/.
        - [Amavisd] Override @av_scanners_backup settings in other config
          snippet files.
        - [MySQL] Can not remove record which contains non-ascii character
          from table `domain_admins` with unexpected collate.

    * Updated packages:
        + netdata -> 1.33.1.

iRedMail-1.5.1:
    * Updated packages:
        + Roundcube webmail -> 1.5.2.
          Addresses one XSS security fix, also fixes some minor issues.

iRedMail-1.5.0:
    * Supports new distribution releases:
        + OpenBSD 7.0

    * DROPPED distribution release:
        - CentOS 7, CentOS 8. Please use CentOS Stream 8 or Rocky Linux 8 instead.
            - CentOS 7 is too old.
            - CentOS 8 is end-of-life after Dec 31, 2021.
        - Debian 10. Please use Debian 11 instead.
            - Debian 10 enters LTS on July 2022. "Debian LTS is not handled by
              the Debian security team, but by a separate group of volunteers
              and companies interested in making it a success."
        - Ubuntu 18.04. Please use Ubuntu 20.04 instead.
            - Users chose 20.04 more than 18.04, so better just let it go.

    * Improvements:
        + Nginx: Greatly improve the performance of keep-alive connections over
          SSL by enabling `ssl_session_cache`.
          See also #136, thanks to @ludovicandrieux.
        + Nginx: Enable TLSv1.3 by default.
          See also #137, thanks to @ludovicandrieux.
        + Nginx/Dovecot: Add new ssl cipher: EECDH+CHACHA20, remove weak one: AES256+EDH.
          See also #138, thanks to @ludovicandrieux.
        + Postfix now enables smtps (port 465) by default.
        + Fail2ban: Add one more rule to catch auth error in Postfix log file.